# kindle

./: .gitignore  Makefile  README.txt  clippings.json  clippings.md  full_clippings.md  miniclip.txt  parser.py  pyproject.toml  result.txt  utils.py
input/: My Clippings.txt
kindle_clippings_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
